--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -86,6 +86,11 @@
         <h2>Your Top10 Tracks</h2>
         <ul id="track-list"></ul>
     </div>
+    <button id="fetch-artists">Show My Artists</button>
+    <div id="artists">
+        <h2>Your Top10 Artists</h2>
+        <ul id="artist-list"></ul>
+    </div>
 
     <script>
         document.getElementById('fetch-tracks').addEventListener('click', async () => {
