--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -30,7 +30,7 @@
             margin-bottom: 20px;
         }
 
-        #fetch-tracks {
+        #fetch-tracks, #fetch-artists {
             font-size: 1.2rem;
             padding: 15px 30px;
             background-color: #1DB954; /* Spotify Green */
@@ -39,7 +39,10 @@
             border-radius: 30px;
             cursor: pointer;
             transition: background-color 0.3s ease, transform 0.2s ease;
-            margin-top: 20px;
+            margin: 10px 0;
+            display: block;
+            width: 250px;
+            text-align: center;
         }
 
         #fetch-tracks:hover {
