--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -78,7 +78,11 @@
         }
 
         .artist-name {
-            color: #B3B3B3; /* Lighter gray for artists */
+            color: #FFFFFF; /* Lighter gray for artists */
+        }
+
+        .genre-name {
+            color: #FFFFFF; /* White for genres */
         }
     </style>
 </head>
@@ -95,6 +99,12 @@
     <div id="artists" class="dropdown">
         <h2>Your Top 10 Artists</h2>
         <ul id="artist-list"></ul>
+    </div>
+
+    <button id="fetch-genres">Show My Genres</button>
+    <div id="genres" class="dropdown">
+        <h2>Your Top 10 Genres</h2>
+        <ul id="genre-list"></ul>
     </div>
 
     <script>
@@ -140,6 +150,11 @@
         toggleSection('fetch-artists', 'artists', '/api/artists', 'artist-list', artist => {
             return `<span class="artist-name">${artist.name}</span>`;
         });
+
+        toggleSection('fetch-genres', 'genres', '/api/genres', 'genre-list', genre => {
+            return `<span class="genre-name">${genre.name}</span>`;
+        });
+        
     </script>
 </body>
 </html>
