--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Login</title>
     <style>
-        /* General Reset */
         * {
             margin: 0;
             padding: 0;
@@ -14,7 +13,7 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #191414; /* Spotify's dark theme */
+            background-color: #191414; 
             color: #FFFFFF;
             display: flex;
             justify-content: center;
@@ -29,7 +28,7 @@
 
         .container {
             text-align: center;
-            background-color: #282828; /* Slightly lighter dark */
+            background-color: #282828; 
             padding: 30px;
             border-radius: 12px;
             box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.5);
@@ -40,7 +39,7 @@
             font-size: 1.2rem;
             font-weight: bold;
             color: #FFFFFF;
-            background-color: #1DB954; /* Spotify green */
+            background-color: #1DB954; 
             padding: 15px 30px;
             border-radius: 30px;
             transition: background-color 0.3s ease, transform 0.2s ease;
@@ -48,8 +47,8 @@
         }
 
         a:hover {
-            background-color: #1ed760; /* Brighter green on hover */
-            transform: scale(1.05); /* Slight pop effect */
+            background-color: #1ed760; 
+            transform: scale(1.05); 
         }
 
         .logo {
@@ -66,16 +65,13 @@
     </div>
 
     <script>
-        // Check if the user is already logged in
         if (localStorage.getItem('isLoggedIn')) {
-            // Redirect to dashboard if already logged in
             window.location.href = '/dashboard';
         }
 
         // Set up the login button
         const loginBtn = document.getElementById('login-btn');
         loginBtn.addEventListener('click', () => {
-            // Clear localStorage login state before starting a new login
             localStorage.removeItem('isLoggedIn');
         });
     </script>
