--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -83,6 +83,8 @@
         .genre-name {
             color: #FFFFFF; 
         }
+
+        
     </style>
 </head>
 <body>
@@ -99,6 +101,16 @@
         <h2>Your Top 10 Artists</h2>
         <ul id="artist-list"></ul>
     </div>
+
+    <!-- Now playing music -->
+    <div id="now-playing-bar" style="display: flex; align-items: center; position: fixed; bottom: 0; left: 0; width: 100%; background-color: #282828; color: white; padding: 10px 20px; box-shadow: 0 -2px 10px rgba(0,0,0,0.7); font-family: Arial, sans-serif; z-index: 1000;">
+    <img id="now-playing-album-art" src="" alt="Album Art" style="height: 60px; width: 60px; border-radius: 4px; margin-right: 15px; object-fit: cover; background-color: #000;">
+        <div id="now-playing-info" style="display: flex; flex-direction: column; justify-content: center; overflow: hidden;">
+            <div id="now-playing-track" style="font-weight: bold; font-size: 1.1rem; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 300px;">Not Playing</div>
+            <div id="now-playing-artist" style="font-size: 0.9rem; color: #b3b3b3; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 300px;"></div>
+        </div>
+    </div>
+
 
     <!-- <button id="fetch-genres">Show My Genres</button>
     <div id="genres" class="dropdown">
@@ -152,6 +164,38 @@
         // toggleSection('fetch-genres', 'genres', '/api/genres', 'genre-list', genre => {
         //     return `<span class="genre-name">${genre.name}</span>`;
         // });
+        async function updateNowPlaying() {
+        try {
+            const response = await fetch('/api/now-playing');
+            if (!response.ok) throw new Error('Failed to fetch now playing');
+
+            const data = await response.json();
+
+            if (data && data.item) {
+                const track = data.item;
+                const artists = track.artists.map(artist => artist.name).join(', ');
+                const albumArt = track.album.images[0]?.url || '';
+
+                document.getElementById('now-playing-album-art').src = albumArt;
+                document.getElementById('now-playing-track').textContent = track.name;
+                document.getElementById('now-playing-artist').textContent = artists;
+            } else {
+                // No track playing
+                document.getElementById('now-playing-album-art').src = '';
+                document.getElementById('now-playing-track').textContent = 'Not Playing';
+                document.getElementById('now-playing-artist').textContent = '';
+            }
+        } catch (error) {
+            console.error(error);
+            document.getElementById('now-playing-track').textContent = 'Error loading now playing';
+            document.getElementById('now-playing-artist').textContent = '';
+            document.getElementById('now-playing-album-art').src = '';
+        }
+    }
+
+    // Initial fetch and update every 15 seconds
+    updateNowPlaying();
+    setInterval(updateNowPlaying, 15000);
     </script>
 </body>
 </html>
