--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -193,7 +193,7 @@ function displayNoMusic() {
 
 updateNowPlaying();
 setInterval(updateNowPlaying, 15000);
-
+// small change
     </script>
 </body>
 </html>
