--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -108,6 +108,8 @@
         <div id="now-playing-info" style="display: flex; flex-direction: column; justify-content: center; overflow: hidden;">
             <div id="now-playing-track" style="font-weight: bold; font-size: 1.1rem; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 300px;">Not Playing</div>
             <div id="now-playing-artist" style="font-size: 0.9rem; color: #b3b3b3; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 300px;"></div>
+            <div id="now-playing-album" style="font-size: 0.85rem; color: #888; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 300px; margin-top: 2px;"></div>
+
         </div>
     </div>
 
@@ -161,9 +163,6 @@
             return `<span class="artist-name">${artist.name}</span>`;
         });
 
-        // toggleSection('fetch-genres', 'genres', '/api/genres', 'genre-list', genre => {
-        //     return `<span class="genre-name">${genre.name}</span>`;
-        // });
         // Now Playing Bar
         async function updateNowPlaying() {
     try {
@@ -176,24 +175,29 @@
         }
         const track = data.item;
         const artists = track.artists.map(artist => artist.name).join(', ');
+        const albumName = track.album.name || '';
         const albumArt = track.album.images[0]?.url || '';
+
+        document.getElementById('now-playing-album-art').style.display = 'block';
         document.getElementById('now-playing-album-art').src = albumArt;
         document.getElementById('now-playing-track').textContent = track.name;
         document.getElementById('now-playing-artist').textContent = artists;
+        document.getElementById('now-playing-album').textContent = albumName;
     } catch (error) {
         displayNoMusic();
     }
 }
 
 function displayNoMusic() {
-    document.getElementById('now-playing-album-art').src = '';
+    document.getElementById('now-playing-album-art').style.display = 'none';
     document.getElementById('now-playing-track').textContent = 'No music playing';
     document.getElementById('now-playing-artist').textContent = '';
+    document.getElementById('now-playing-album').textContent = '';
 }
 
 updateNowPlaying();
 setInterval(updateNowPlaying, 15000);
-// small change
+
     </script>
 </body>
 </html>
