--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -103,15 +103,13 @@
     </div>
 
     <!-- Now playing music -->
-    <div id="now-playing-bar" style="display: flex; align-items: center; position: fixed; bottom: 0; left: 0; width: 100%; background-color: #282828; color: white; padding: 10px 20px; box-shadow: 0 -2px 10px rgba(0,0,0,0.7); font-family: Arial, sans-serif; z-index: 1000;">
-    <img id="now-playing-album-art" src="" alt="Album Art" style="height: 60px; width: 60px; border-radius: 4px; margin-right: 15px; object-fit: cover; background-color: #000;">
-        <div id="now-playing-info" style="display: flex; flex-direction: column; justify-content: center; overflow: hidden;">
-            <div id="now-playing-track" style="font-weight: bold; font-size: 1.1rem; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 300px;">Not Playing</div>
-            <div id="now-playing-artist" style="font-size: 0.9rem; color: #b3b3b3; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 300px;"></div>
-            <div id="now-playing-album" style="font-size: 0.85rem; color: #888; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 300px; margin-top: 2px;"></div>
-
-        </div>
+<div id="now-playing-box" style="position: fixed; bottom: 20px; right: 20px; width: 320px; background-color: #282828; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.7); display: flex; padding: 12px; align-items: center; font-family: 'Arial', sans-serif; color: white; cursor: default; user-select: none; z-index: 1000; transition: background-color 0.3s ease;">
+    <img id="now-playing-album-art" src="" alt="Album Art" style="height: 60px; width: 60px; border-radius: 8px; object-fit: cover; background-color: #000; flex-shrink: 0;">
+    <div id="now-playing-info" style="display: flex; flex-direction: column; justify-content: center; margin-left: 15px; overflow: hidden;">
+        <div id="now-playing-track" style="font-weight: 700; font-size: 1.1rem; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 240px; color: #1DB954;">Not Playing</div><div id="now-playing-artist" style="font-size: 0.9rem; color: #B3B3B3; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 240px; margin-top: 2px;"></div><div id="now-playing-album" style="font-size: 0.85rem; color: #888; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 240px; margin-top: 4px; font-style: italic;"></div>
     </div>
+</div>
+
 
 
     <!-- <button id="fetch-genres">Show My Genres</button>
