--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -103,13 +103,21 @@
     </div>
 
     <!-- Now playing music -->
-<div id="now-playing-box" style="position: fixed; bottom: 20px; right: 20px; width: 320px; background-color: #282828; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.7); display: flex; padding: 12px; align-items: center; font-family: 'Arial', sans-serif; color: white; cursor: default; user-select: none; z-index: 1000; transition: background-color 0.3s ease;">
-    <img id="now-playing-album-art" src="" alt="Album Art" style="height: 60px; width: 60px; border-radius: 8px; object-fit: cover; background-color: #000; flex-shrink: 0;">
-    <div id="now-playing-info" style="display: flex; flex-direction: column; justify-content: center; margin-left: 15px; overflow: hidden;">
-        <div id="now-playing-track" style="font-weight: 700; font-size: 1.1rem; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 240px; color: #1DB954;">Not Playing</div><div id="now-playing-artist" style="font-size: 0.9rem; color: #B3B3B3; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 240px; margin-top: 2px;"></div><div id="now-playing-album" style="font-size: 0.85rem; color: #888; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 240px; margin-top: 4px; font-style: italic;"></div>
-    </div>
+    <div id="now-playing-box" style="position: fixed; bottom: 20px; right: 20px; width: 320px; background-color: #282828; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.7); display: flex; padding: 12px; align-items: center; font-family: 'Arial', sans-serif; color: white; cursor: default; user-select: none; z-index: 1000; overflow: hidden;">
+  <div id="blurred-bg" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; filter: blur(20px); opacity: 0.15; background-position: center; background-size: cover; z-index: 0; border-radius: 12px; transition: background-image 0.5s ease;"></div>
+  <img id="now-playing-album-art" alt="Album Art" style="height: 60px; width: 60px; border-radius: 50%; object-fit: cover; background-color: #000; flex-shrink: 0; z-index: 2; animation: spin 20s linear infinite;" />
+  <div id="now-playing-info" style="display: flex; flex-direction: column; justify-content: center; margin-left: 15px; overflow: hidden; position: relative; z-index: 2;">
+    <div id="now-playing-track" style="font-weight: 700; font-size: 1.1rem; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 240px; color: #1DB954;">Not Playing</div>
+    <div id="now-playing-artist" style="font-size: 0.9rem; color: #B3B3B3; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 240px; margin-top: 2px;"></div>
+    <div id="now-playing-album" style="font-size: 0.85rem; color: #888; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 240px; margin-top: 4px; font-style: italic;"></div>
+  </div>
 </div>
 
+    <style>
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
 
 
     <!-- <button id="fetch-genres">Show My Genres</button>
@@ -181,6 +189,7 @@
         document.getElementById('now-playing-track').textContent = track.name;
         document.getElementById('now-playing-artist').textContent = artists;
         document.getElementById('now-playing-album').textContent = albumName;
+        document.getElementById('blurred-bg').style.backgroundImage = `url(${albumArt})`;
     } catch (error) {
         displayNoMusic();
     }
