--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -118,6 +118,7 @@
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
+    </style>
 
 
     <!-- <button id="fetch-genres">Show My Genres</button>
