--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -102,6 +102,12 @@
         <ul id="artist-list"></ul>
     </div>
 
+    <button id="fetch-soundtrack">Show Soundtrack of Your Life</button>
+    <div id="soundtrack" class="dropdown">
+        <h2>Your Soundtrack</h2>
+        <ul id="soundtrack-list"></ul>
+    </div>
+
     <!-- Now playing music -->
     <div id="now-playing-box" style="position: fixed; bottom: 20px; right: 20px; width: 320px; background-color: #282828; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.7); display: flex; padding: 12px; align-items: center; font-family: 'Arial', sans-serif; color: white; cursor: default; user-select: none; z-index: 1000; overflow: hidden;">
   <div id="blurred-bg" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; filter: blur(20px); opacity: 0.15; background-position: center; background-size: cover; z-index: 0; border-radius: 12px; transition: background-image 0.5s ease;"></div>
@@ -170,6 +176,10 @@
             return `<span class="artist-name">${artist.name}</span>`;
         });
 
+        toggleSection('fetch-soundtrack', 'soundtrack', '/api/soundtrack', 'soundtrack-list', item => {
+            return `<li><span class="track-name">${item.name}</span> by <span class="artist-name">${item.artist}</span> (${item.album})</li>`;
+        });
+
         // Now Playing Bar
         async function updateNowPlaying() {
     try {
@@ -205,6 +215,36 @@ function displayNoMusic() {
 
 updateNowPlaying();
 setInterval(updateNowPlaying, 15000);
+
+    // Fetch top tracks for a time range
+    app.get('/api/top-tracks/:range', async (req, res) => {
+    if (!req.user) return res.status(401).json({ message: 'Unauthorized' });
+
+    const accessToken = req.user.accessToken;
+    const timeRange = req.params.range; // 'short_term', 'medium_term', 'long_term'
+
+    try {
+        const response = await axios.get(`https://api.spotify.com/v1/me/top/tracks`, {
+        headers: { Authorization: `Bearer ${accessToken}` },
+        params: {
+            time_range: timeRange,
+            limit: 10
+        }
+        });
+
+        const tracks = response.data.items.map(track => ({
+        name: track.name,
+        artist: track.artists.map(a => a.name).join(', '),
+        album: track.album.name,
+        image: track.album.images[0]?.url
+        }));
+
+        res.json(tracks);
+    } catch (err) {
+        console.error(err.response?.data || err);
+        res.status(500).send('Failed to fetch top tracks');
+    }
+    });
 
     </script>
 </body>
