--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -83,7 +83,57 @@
         .genre-name {
             color: #FFFFFF; 
         }
+            body {
+      margin: 0;
+      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      background-color: #191414;
+      color: white;
+    }
 
+    .menu-container {
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      z-index: 999;
+    }
+
+    .menu-button {
+      font-size: 24px;
+      background: none;
+      border: none;
+      cursor: pointer;
+      color: #1DB954;
+      padding: 0.5rem;
+    }
+
+    .menu {
+      position: absolute;
+      right: 0;
+      margin-top: 0.5rem;
+      background-color: #282828;
+      border: 1px solid #333;
+      border-radius: 8px;
+      padding: 0.5rem 0;
+      display: flex;
+      flex-direction: column;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+    }
+
+    .menu a {
+      padding: 0.75rem 1.5rem;
+      color: white;
+      text-decoration: none;
+      transition: background 0.3s ease;
+    }
+
+    .menu a:hover {
+      background-color: #1DB954;
+      color: #191414;
+    }
+
+    .hidden {
+      display: none;
+    }
         
     </style>
 </head>
@@ -118,11 +168,15 @@
     <div id="now-playing-album" style="font-size: 0.85rem; color: #888; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 240px; margin-top: 4px; font-style: italic;"></div>
   </div>
 </div>
-
-    <input type="text" id="artist-input" placeholder="Enter artist name" />
-    <button id="show-dna">Show Artist DNA</button>
-    <svg id="artist-dna" width="800" height="600"></svg>
-
+<!-- menu -->
+      <div class="menu-container">
+    <button id="menu-button" class="menu-button" aria-label="Menu">☰</button>
+    <div id="menu" class="menu hidden">
+      <a href="/top-tracks">🎵 Top Tracks</a>
+      <a href="/top-artists">🌟 Top Artists</a>
+      <a href="/now-playing">▶️ Now Playing</a>
+    </div>
+  </div>
 
     <style>
         @keyframes spin {
@@ -258,92 +312,21 @@ setInterval(updateNowPlaying, 15000);
 
 
     </script>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-<script>
-document.getElementById('show-dna').addEventListener('click', async () => {
-    const name = document.getElementById('artist-input').value;
-    if (!name) return;
 
-    const res = await fetch(`/api/related-artists?name=${encodeURIComponent(name)}`);
-    const data = await res.json();
-    
-    const nodes = [{ id: data.root, group: 0 }, ...data.related.map(a => ({ id: a.name, group: 1 }))];
-    const links = data.related.map(a => ({ source: data.root, target: a.name }));
+<!-- menu button -->
+     <script>
+    const menuButton = document.getElementById("menu-button");
+    const menu = document.getElementById("menu");
 
-    const svg = d3.select("#artist-dna");
-    svg.selectAll("*").remove(); // Clear previous
-
-    const width = +svg.attr("width");
-    const height = +svg.attr("height");
-
-    const simulation = d3.forceSimulation(nodes)
-        .force("link", d3.forceLink(links).id(d => d.id).distance(150))
-        .force("charge", d3.forceManyBody().strength(-300))
-        .force("center", d3.forceCenter(width / 2, height / 2));
-
-    const link = svg.append("g")
-        .attr("stroke", "#999")
-        .attr("stroke-opacity", 0.6)
-        .selectAll("line")
-        .data(links)
-        .join("line")
-        .attr("stroke-width", 1.5);
-
-    const node = svg.append("g")
-        .attr("stroke", "#fff")
-        .attr("stroke-width", 1.5)
-        .selectAll("circle")
-        .data(nodes)
-        .join("circle")
-        .attr("r", 10)
-        .attr("fill", d => d.group === 0 ? "#1DB954" : "#888")
-        .call(drag(simulation));
-
-    const label = svg.append("g")
-        .selectAll("text")
-        .data(nodes)
-        .join("text")
-        .text(d => d.id)
-        .attr("x", 15)
-        .attr("y", ".31em")
-        .style("fill", "#fff")
-        .style("font-size", "12px");
-
-    simulation.on("tick", () => {
-        link
-            .attr("x1", d => d.source.x)
-            .attr("y1", d => d.source.y)
-            .attr("x2", d => d.target.x)
-            .attr("y2", d => d.target.y);
-
-        node
-            .attr("cx", d => d.x)
-            .attr("cy", d => d.y);
-
-        label
-            .attr("x", d => d.x + 12)
-            .attr("y", d => d.y);
+    menuButton.addEventListener("click", () => {
+      menu.classList.toggle("hidden");
     });
 
-    function drag(simulation) {
-        return d3.drag()
-            .on("start", (event, d) => {
-                if (!event.active) simulation.alphaTarget(0.3).restart();
-                d.fx = d.x;
-                d.fy = d.y;
-            })
-            .on("drag", (event, d) => {
-                d.fx = event.x;
-                d.fy = event.y;
-            })
-            .on("end", (event, d) => {
-                if (!event.active) simulation.alphaTarget(0);
-                d.fx = null;
-                d.fy = null;
-            });
-    }
-});
-</script>
-
+    document.addEventListener("click", (event) => {
+      if (!menu.contains(event.target) && !menuButton.contains(event.target)) {
+        menu.classList.add("hidden");
+      }
+    });
+  </script>
 </body>
 </html>
