--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -169,14 +169,15 @@
   </div>
 </div>
 <!-- menu -->
-      <div class="menu-container">
-    <button id="menu-button" class="menu-button" aria-label="Menu">☰</button>
-    <div id="menu" class="menu hidden">
-      <a href="/top-tracks">🎵 Top Tracks</a>
-      <a href="/top-artists">🌟 Top Artists</a>
-      <a href="/now-playing">▶️ Now Playing</a>
-    </div>
+    <div class="menu-container">
+  <button id="menu-button" class="menu-button" aria-label="Menu">☰</button>
+  <div id="menu" class="menu hidden">
+    <a href="#" id="menu-top-tracks">🎵 Top Tracks</a>
+    <a href="#" id="menu-top-artists">🌟 Top Artists</a>
+    <a href="#" id="menu-now-playing">▶️ Now Playing</a>
   </div>
+</div>
+
 
     <style>
         @keyframes spin {
