--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -154,7 +154,7 @@
 
     <!-- <button id="fetch-top-tracks">Life Top Track</button> -->
     <div id="top-tracks" class="dropdown">
-        <h2>Your Top Tracks</h2>
+        <h2>Your Life Top Tracks</h2>
         <ul id="top-tracks-list"></ul>
     </div>
 
@@ -247,11 +247,11 @@
 
         toggleSection('menu-top-tracks', 'tracks', '/api/tracks', 'track-list', track => 
             `<span class="track-name">${track.name}</span> by <span class="artist-name">${track.artist}</span>`
-            );
+        );
 
-            toggleSection('menu-top-artists', 'artists', '/api/artists', 'artist-list', artist => 
+        toggleSection('menu-top-artists', 'artists', '/api/artists', 'artist-list', artist => 
             `<span class="artist-name">${artist.name}</span>`
-            );
+        );
         toggleSection('menu-life-top-tracks', 'top-tracks', '/api/top-tracks', 'top-tracks-list', track => {
             return `<span class="track-name">${track.name}</span> by <span class="artist-name">${track.artist}</span>`;
         });
