--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -263,9 +263,7 @@
             return `<span class="track-name">${track.name}</span> by <span class="artist-name">${track.artist}</span>`;
         });
         toggleSection('menu-recently-played', 'recently-played', '/api/recently-played', 'recently-played-list', track => {
-        const playedTime = new Date(track.playedAt).toLocaleString();
-        return `<span class="track-name">${track.name}</span> by <span class="artist-name">${track.artist}</span> <br>
-                <small style="color:#888;">Played at: ${playedTime}</small>`;
+        return `<span class="track-name">${track.name}</span> by <span class="artist-name">${track.artist}</span>`;
         });
 
 
@@ -305,35 +303,7 @@ function displayNoMusic() {
 updateNowPlaying();
 setInterval(updateNowPlaying, 15000);
 
-    // Fetch top tracks of all time
-    app.get('/api/top-tracks', async (req, res) => {
-    if (!req.user) return res.status(401).json({ message: 'Unauthorized' });
 
-    const accessToken = req.user.accessToken;
-    const timeRange = 'long_term'; // Always long-term
-
-    try {
-        const response = await axios.get('https://api.spotify.com/v1/me/top/tracks', {
-            headers: { Authorization: `Bearer ${accessToken}` },
-            params: {
-                time_range: timeRange,
-                limit: 10
-            }
-        });
-
-        const tracks = response.data.items.map(track => ({
-            name: track.name,
-            artist: track.artists.map(a => a.name).join(', '),
-            album: track.album.name,
-            image: track.album.images[0]?.url
-        }));
-
-        res.json(tracks);
-    } catch (err) {
-        console.error(err.response?.data || err);
-        res.status(500).send('Failed to fetch top tracks');
-    }
-});
 
 
     </script>
