--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -158,9 +158,9 @@
         <ul id="top-tracks-list"></ul>
     </div>
 
-    <div id="recently-played" class="dropdown" style="display:none;">
-    <h2>Your Recently Played Tracks</h2>
-    <ul id="recently-played-list"></ul>
+    <div id="recently-played" class="dropdown">
+        <h2>Your Recently Played Tracks</h2>
+        <ul id="recently-played-list"></ul>
     </div>
 
 
